...
      ),
    );
  }

  Widget _buildHeader(BuildContext context) {
    return Text(
      'About Me',
      style: Theme.of(
        context,
      ).textTheme.displayMedium?.copyWith(color: AppTheme.cyan),
    );
  }

...
