...
          style: Theme.of(
            context,
          ).textTheme.headlineMedium?.copyWith(color: AppTheme.textSecondary),
        ),
        const SizedBox(height: 8),
        TypingText(
          texts: const ['Niraj Vatvani', 'a CTO', 'a Builder', 'an Innovator'],
          style: titleStyle,
        ),
        const SizedBox(height: 24),
        Text(
          'Chief Technology Officer | Energy Tech | Product Leader',
          style: Theme.of(context).textTheme.bodyLarge,
...
